--- a/html_advanced/2-index.html
+++ b/html_advanced/2-index.html
@@ -6,8 +6,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
             <title>Homepage - Techium</title>
             <meta name="description" content="Techium is a digital agency">
-            <link rel="icon" type="image/x-icon" href="./favicon.ico">
-            <link rel="icon" type="image/png" href="./favicon.png">
-        </body>
+            <link rel="icon" href="./favicon.ico" type="image/x-icon">
+            <link rel="icon" href="./favicon.png" type="image/png">
     </head>
 </html>
