--- a/html_advanced/1-index.html
+++ b/html_advanced/1-index.html
@@ -2,6 +2,12 @@
 <html lang="en" dir="ltr">
     <head>
         <body>
+            <meta charset="uft-8">
+            <meta name="viewport" width="device-width" initial-scale="1.0" viewport-fit="cover">
+            <title>Homepage - Techium</title>
+            <meta name="description" content="Techium is a digital agency">
+            <link rel="icon" type="image/x-icon" href="./favicon.ico">
+            <link rel="icon" type="image/png" href="./favicon.png">
         </body>
     </head>
 </html>
