--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -92,8 +92,6 @@
                 </div>
             </section>
         </main>
-        <div>
-            <footer>Footer</footer>
-        </div>
+            <footer><div>Footer</div></footer>
     </body>
 </html>
