--- a/html_advanced/23-index.html
+++ b/html_advanced/23-index.html
@@ -42,16 +42,18 @@
             <section>
                 <div>
                     <header>
-                        <a href="#"><h2>Services</h2></a>
+                        <h2>Services</h2>
                         <p>We work with you</p>
                     </header>
                     <div>
+                        <a href="#">
                         <h3>Design & Concept</h3>
                         <h3>Digital Strategy</h3>
                         <h3>Content Strategy</h3>
                         <h3>UX Design</h3>
                         <h3>Web Development</h3>
                         <h3>Social Media</h3>
+                        </a>
                     </div>
                 </div>
             </section>
@@ -59,13 +61,15 @@
             <section>
                 <div>
                     <header>
-                        <a href="#"><h2>Works</h2></a>
+                        <h2>Works</h2>
                         <p>Take a look in our portfolio</p>
                     </header>
                     <div>
+                        <a href="#">
                         <article><h3>Interior Design</h3></article>
                         <article><h3>Web Development</h3></article>
                         <article><h3>Personal Brand</h3></article>
+                        </a>
                     </div>
                 </div>
             </section>
@@ -91,22 +95,22 @@
             <section>
                 <div>
                     <header>
-                        <a href="#"><h2>Latest news</h2></a>
+                        <h2>Latest news</h2>
                     </header>
                     <div>
                         <article>
                             <p>Career</p>
-                        <h3>Hoc loco tenere se Triarius non potuit.</h3>
+                        <a href="#"><h3>Hoc loco tenere se Triarius non potuit.</h3></a>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                         </article>
                         <article>
                         <p>Digital Life</p>
-                        <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
+                        <a href="#"><h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3></a>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
                         </article>
                         <article>
                         <p>Social</p>
-                        <h3>Bestiarum vero nullum iudicium puto.</h3>
+                        <a href="#"><h3>Bestiarum vero nullum iudicium puto.</h3></a>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
                         </article>
                     </div>
