--- a/html_advanced/23-index.html
+++ b/html_advanced/23-index.html
@@ -63,9 +63,15 @@
                         <p>Take a look in our portfolio</p>
                     </header>
                     <div>
-                        <h3><a href="#">Interior Design</a></h3>
-                        <h3><a href="#">Web Development</a></h3>
-                        <h3><a href="#">Personal Brand</a></h3>
+                        <article>
+                            <h3><a href="#">Interior Design</a></h3>
+                        </article>
+                        <article>
+                            <h3><a href="#">Web Development</a></h3>
+                        </article>
+                        <article>
+                            <h3><a href="#">Personal Brand</a></h3>
+                        </article>
                     </div>
                 </div>
             </section>
