--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -169,7 +169,7 @@
             <!-- Footer -->
             <footer>
                 <address>
-                    Washington Street<br>
+                    234 Washington Street<br>
                     Urbana, Illinois
                 </address>
                 <div>
