Adding all with images

--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -138,6 +138,12 @@
             </section>
         </main>
             <!-- Footer -->
-            <footer><div>Footer</div></footer>
+            <footer>
+                <div>
+                    <a href="https://www.facebook.com/HolbertonSchool/" target="_blank">Facebook</a>
+                    <a href="https://twitter.com/holbertonschool" target="_blank">Twitter</a>
+                    <a href="https://www.instagram.com/holbertonschool/" target="_blank">Instagram</a>
+                </div>
+            </footer>
     </body>
 </html>
