--- a/accessibility/skip-links/01-article.html
+++ b/accessibility/skip-links/01-article.html
@@ -11,6 +11,17 @@
     <link rel="stylesheet" href="00-styles.css">
   </head>
   <body class="article-page">
+    <!-- Skip links -->
+   <nav aria-label="Skip links">
+    <ul class="off-screen">
+      <li>
+        <a class="skip-link" href="#a11y-primary-nav">Skip to primary navigation</a>
+      </li>
+      <li>
+        <a href="#a11y-main-content" class="skip-link">Skip to main content</a>
+      </li>
+    </ul>
+   </nav>
 
     <!-- Header -->
     <header class="header" data-section-theme="dark">
@@ -69,7 +80,7 @@
 
     <!-- Main -->
     <main>
-
+        <main id="a11y-main-content" tabindex="-1">
       <!-- Hero section -->
       <header class="section-hero hero-article" data-section-theme="dark" style="background-image: url('../images/pic-article-02.jpg')">
         <div class="container">
