--- a/accessibility/skip-links/01-index.html
+++ b/accessibility/skip-links/01-index.html
@@ -78,6 +78,7 @@
     </header>
     <!– Main –>
     <main>
+      <main id="a11y-main-content" tabindex="-1">
       <h1 class="visually-hidden">Homepage</h1>
       <!– Hero section –>
       <section class="section-hero hero-homepage" data-section-theme="dark">
