--- a/form/02-article.html
+++ b/form/02-article.html
@@ -147,7 +147,7 @@
                 <h2 class="section-title">Leave a comment</h2>
                 <p>All fields are required.</p>
             </header>
-            <form action="#" method="post"></form>
+            <form action="#" method="post">
               <fieldset>
                 <legend class="visually-hidden">Your personal information</legend>
                 <div class="form-group" class="col-1-2">
@@ -171,6 +171,8 @@
                 
                 </div>
               </fieldset>
+            </form>
+              
         </section>
         </div>
       </div>
