--- a/form/02-article.html
+++ b/form/02-article.html
@@ -161,7 +161,7 @@
                 </div>
               </fieldset>
               <fieldset>
-                <legend class="visually-hidden">Your personal information</legend>
+                <legend class="visually-hidden">Your comment</legend>
                 <div class="form-group col-2-3">
                 
                 </div>
