--- a/form/05-article.html
+++ b/form/05-article.html
@@ -224,6 +224,7 @@
                       accesskey="t"
                       required
                       >
+                      <i class="form-field-icon"></i>
                     </span>
                     <p class="form-help">Title should be at least 4 characters and only contains letters</p>
                   </div>
