--- a/Bootstrap/2-index.html
+++ b/Bootstrap/2-index.html
@@ -32,7 +32,7 @@
             </section>
 
             <section>
-                <h1 class="mt-4 mb-3">Chemical elements <span class="badge badge-info">only 5</span></h1>
+                <h1 class="mt-4 mb-3">Chemical elements <span class="badge badge-info rounded-pill">only 5</span></h1>
                 <div class="table-responsive-lg">
                     <table class="table table-dark table-hover">
                         <thead>
