--- a/Bootstrap/3-index.html
+++ b/Bootstrap/3-index.html
@@ -54,12 +54,12 @@
         </div>
 
         <!-- Modal -->
-        <div class="modal fade" id="playModal" tabindex="-1" role="dialog" aria-labelledby="playModal" aria-hidden="true">
+        <div class="modal fade" id="playModal" tabindex="-1" role="dialog">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="playModalLabel">Play with CodePen</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <button type="button" class="close" data-dismiss="modal">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
