--- a/Cookies_local_storage/3-index.html
+++ b/Cookies_local_storage/3-index.html
@@ -3,71 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cookies Assignment</title>
+    <title>index 3</title>
 </head>
 <body>
-    <div id="loginForm">
-        <h2></h2>
-        <input type="firstname">
-        <input type="email">
-        <button></button>
+    <div id="loginForm" style="display: none;">
+        <h2>Login to the website</h2>
+        <input type="text" id="firstname" placeholder="Firstname">
+        <input type="email" id="email" placeholder="Email">
+        <button onclick="setCookies()">Log me in</button>
     </div>
-    <h1>Cookie Manager</h1>
-    <label for="firstname">First Name</label>
-    <input type="text" id="firstname" name="firstname">
-    <label for="email">Email</label>
-    <input type="text" id="email" name="email">
-    <button onclick="setCookies()">Log me in</button>
-    <button onclick="showCookies()">Show the cookies</button>
-    <p id="cookiePTag"></p>
     <script>
-        function setCookies() {
-            const firstname = document.getElementById('firstname').value;
-            const email = document.getElementById('email').value;
-            let date = new Date();
-            date.setTime(date.getTime() + (10 * 24 * 60 * 60 * 1000));
-            let expires = "expires=" + date.toUTCString();
-            document.cookie = `firstname=${firstname}; ${expires};`;
-            document.cookie = `email=${email}; ${expires};`;
-        }
+    function setCookies() {
+        const firstname = document.getElementById('firstname').value;
+        const email = document.getElementById('email').value;
+        let date = new Date();
+        date.setTime(date.getTime() + (10 * 24 * 60 * 60 * 1000));
+        let expires = "expires=" + date.toUTCString();
+        document.cookie = `firstname=${firstname}; ${expires}; path=/`;
+        document.cookie = `email=${email}; ${expires}; path=/`;
+        showWelcomeMessageOrForm();
+    }
 
-        function showForm() {
-            if (welcomeMessage) {
-                welcomeMessage.remove();
+    function showForm() {
+        const welcomeMessage = document.querySelector('h1');
+        if (welcomeMessage) {
+            welcomeMessage.remove();
+        }
+        document.getElementById('loginForm').style.display = 'block';
+    }
+
+    function hideForm() {
+        document.getElementById("loginForm").style.display = "none";
+    }
+
+    function deleteCookiesAndShowForm() {
+        document.cookie = "firstname=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+        document.cookie = "email=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+        showForm();
+    }
+
+    function getCookie(name) {
+        let cookies = document.cookie.split(';');
+        for (let i = 0; i < cookies.length; i++) {
+            let cookie = cookies[i].trim();
+            if (cookie.startsWith(name + '=')) {
+                return cookie.substring(name.length + 1);
             }
-            const formContainer = document.getElementById('loginForm');
-            formContainer.style.display = 'block';
         }
+        return '';
+    }
 
-        function hideForm() {
-            document.getElementById("loginForm").style.display="none";
+    function showWelcomeMessageOrForm() {
+        const firstname = getCookie('firstname');
+        const email = getCookie('email');
+        // I guess
+        if (firstname && email) {
+            hideForm();
+            document.body.innerHTML = `
+                <h1>Welcome ${firstname} 
+                    <span class="logout-link" onclick="deleteCookiesAndShowForm()">(logout)</span>
+                </h1>`;
+        } else {
+            showForm();
         }
+    }
 
-        function deleteCookiesAndShowForm() {
-
-        }
-    
-        function showWelcomeMessageOrForm() {
-
-        }
-    
-        function getCookie(name) {
-            let cookies = document.cookie.split(';');
-            for (let i = 0; i < cookies.length; i++) {
-                let cookie = cookies[i].trim();
-                if (cookie.startsWith(name + '=')) {
-                    return cookie.substring(name.length + 1);
-                }
-            }
-            return '';
-        }
-
-        function showCookies() {
-            const email = getCookie('email');
-            const firstname = getCookie('firstname');
-            const p = document.getElementById('cookiePTag');
-            p.textContent = `Email: ${email} - Firstname: ${firstname}`;
-        }
+    window.onload = showWelcomeMessageOrForm;
     </script>
 </body>
 </html>
